[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://graphics/mainmenu.png" type="Texture" id=2]
[ext_resource path="res://graphics/Font_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://graphics/Font_8.tres" type="DynamicFont" id=5]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="SpinBox" type="SpinBox" parent="."]
visible = false
margin_right = 74.0
margin_bottom = 24.0
min_value = 1.0
max_value = 2.0
value = 1.0

[node name="BGColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 240.0
rect_min_size = Vector2( 320, 240 )
color = Color( 0, 0, 0, 1 )

[node name="Mainmenu" type="Sprite" parent="."]
position = Vector2( 160, 120 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 240.0
rect_min_size = Vector2( 320, 240 )

[node name="VBoxC" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -90.0
margin_right = 64.0

[node name="NewGame" type="Label" parent="Control/VBoxC"]
margin_right = 128.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 4 )
text = "NEW GAME"
align = 1

[node name="Exit" type="Label" parent="Control/VBoxC"]
margin_top = 20.0
margin_right = 128.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "EXIT"
align = 1

[node name="SpaceRect" type="ColorRect" parent="Control/VBoxC"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 8 )
color = Color( 0, 0, 0, 1 )

[node name="HiScore" type="Label" parent="Control/VBoxC"]
margin_top = 52.0
margin_right = 128.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.333333, 1, 0.333333, 1 )
custom_fonts/font = ExtResource( 5 )
text = "HI-SCORE 0"
align = 1
